# nfl-notifier

./: Dockerfile  README.md  config.toml  config_docker.toml  pyproject.toml
nfl_notifier/: google_calendar.py  nfl_notifier.py
tests/: test_nfl_notifier.py
