[tool.poetry]
name = "nfl-notifier"
version = "0.1.0"
description = "This script parses the live broadcasting schedule of #rannfl (https://www.ran.de/us-sport/nfl/live) and creates a Google Calendar entry for the games that are broadcasted either on live TV or on ran.de."
authors = ["Simon Stoeferle <simon.stoeferle@gmx.de>"]

[tool.poetry.scripts]
nfl-notifier = "nfl_notifier.nfl_notifier:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
google-api-python-client = "^2.31.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.6"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
